[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Bird.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Background/background-sheet0.png" type="Texture" id=2]
[ext_resource path="res://assets/Background/mountain-sheet0.png" type="Texture" id=3]
[ext_resource path="res://assets/Background/ground-sheet0.png" type="Texture" id=4]
[ext_resource path="res://assets/Background/cloud-sheet0.png" type="Texture" id=5]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=6]
[ext_resource path="res://scenes/Cacti.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/Game.gd" type="Script" id=8]
[ext_resource path="res://assets/Font/junegull-webfont.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/HUD/playbotton-sheet0.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 9 )

[node name="Game" type="Node2D"]
script = ExtResource( 8 )
cacti = ExtResource( 7 )

[node name="speed timer" type="Timer" parent="."]

[node name="dead timer" type="Timer" parent="."]
one_shot = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="bg" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="bg" type="Sprite" parent="ParallaxBackground/bg"]
position = Vector2( 414, 299 )
texture = ExtResource( 2 )

[node name="clouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 0.5 )
motion_mirroring = Vector2( 1920, 0 )

[node name="clouds" type="Sprite" parent="ParallaxBackground/clouds"]
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 5 )
centered = false

[node name="mountains" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 1921, 0 )

[node name="mountains" type="Sprite" parent="ParallaxBackground/mountains"]
position = Vector2( 0, -481 )
texture = ExtResource( 3 )
centered = false

[node name="forests" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.9, 0.9 )
motion_mirroring = Vector2( 1920, 0 )

[node name="forests" type="Sprite" parent="ParallaxBackground/forests"]
position = Vector2( 0, -476 )
texture = ExtResource( 4 )
centered = false

[node name="Bird" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 165, 115 )
jump_speed = 300.0
gravity_accelerator = 15.0

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 419, 302 )
current = true
script = ExtResource( 6 )

[node name="Cacti Parent" type="Node2D" parent="."]
visible = false

[node name="Cacti" parent="Cacti Parent" instance=ExtResource( 7 )]
position = Vector2( 906, 666 )
prespawned_cacti = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/MarginContainer"]
margin_right = 840.0
margin_bottom = 100.0

[node name="Score Text" type="RichTextLabel" parent="CanvasLayer/Control/MarginContainer/CenterContainer"]
margin_left = 388.0
margin_top = 18.0
margin_right = 452.0
margin_bottom = 82.0
rect_min_size = Vector2( 64, 64 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]0"
text = "0"

[node name="Menu" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 100.0
margin_right = -200.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Menu/MarginContainer"]
margin_right = 440.0
margin_bottom = 400.0
size_flags_vertical = 3

[node name="Play" type="TextureButton" parent="CanvasLayer/Menu/MarginContainer/CenterContainer"]
margin_left = 156.0
margin_top = 136.0
margin_right = 284.0
margin_bottom = 264.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 10 )
expand = true

[node name="reminder" type="RichTextLabel" parent="CanvasLayer"]
visible = false
margin_left = 4.0
margin_top = 570.0
margin_right = 226.0
margin_bottom = 614.0
rect_min_size = Vector2( 128, 32 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Press Q to quit"
text = "Press Q to quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="speed timer" to="." method="_on_speed_timer_timeout"]
[connection signal="timeout" from="dead timer" to="." method="_on_dead_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/Menu/MarginContainer/CenterContainer/Play" to="." method="_on_Play_pressed"]
